# SGM

./: .gitignore  CMakeLists.txt  codestyle.c  const.h  game.c  game.h  index.data  index.js  index.wasm  main.c  tools.c  tools.h  visual.c  visual.h
assets/: nishal.nsd  none.nsd  player.nsd  tile.nsd
cfg/: build-cfg.txt
src/: game.c  game.h  main.c  tools.c  tools.h  visual.c
src/engine/: engine.h  mod.h
src/engine/geometry/: Position.c  Position.h  mod.h
src/engine/objects/: Area.c  Area.h  GameObject.c  GameObject.h  ListGameObject.c  ListGameObject.h  mod.c  mod.h
src/engine/renders/2D/: mod.h
src/engine/renders/2D/abstractions/: Picture.c  Picture.h  Render.c  Render.h  Screen.c  Screen.h  View.c  View.h
src/engine/renders/2D/base/: Picture.c  Picture.h  Render.h  Screen.c  Screen.h  View.c  View.h
src/engine/renders/2D/default/: Pixel.c  Pixel.h  Texture.h  colors.h
src/engine/renders/2D/terminal/: Picture.c  Picture.h  Pixel.c  Pixel.h  Render.c  Texture.c  Texture.h  ascii_colors.h  console.c  console.h
src/engine/renders/2D/terminal/linx/: ascii_colors.h  init_term.c
src/engine/renders/2D/terminal/win/: ascii_colors.h  init_term.c
src/engine/renders/Screen/: Render.c  Render.h
src/engine/renders/screen/: Screen.c  Screen.h  View.c  View.h
src/engine/renders/terminal/: console.h
src/engine/tools/: 2DArray.c  2DArray.h  List.c  List.h  serializer.c
src/game/: Area.c  Area.h  GameObject.c  GameObject.h  Init.c  Init.h  ListGameObject.c  ListGameObject.h  area.c  area.h  cycle.c  cycle.h  mod.c  mod.h  start.c
src/globals/: const.h
src/io/output/: console.c  console.h
src/output/: console.c  console.h  mod.c  mod.h
src/tools/: List.c  List.h  serializer.h
www/: index.data  index.js
